<resources>
    <string name="app_name">Arafin Dico News</string>
    <string name="dummy_date">24 September 2023</string>
    <string name="dummy_title">Ini merupakan testing judul. Overflow? Jadi ellipsis kok! :D</string>
    <string name="menu_profile">Profile</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ut commodo dolor. Donec eleifend, nunc et sodales malesuada, felis lacus interdum mi, quis scelerisque odio nulla nec ipsum. Curabitur augue quam, efficitur nec luctus a, accumsan congue nisi. Aenean ultrices lacinia risus nec condimentum.</string>
    <string name="dummy_name">Akmal Rafi .N</string>
    <string name="dummy_email">akmalrafi81@gmail.com</string>
    <string name="title_profile">Profile</string>
    <string name="dummy_tags">Racing, Automotive, Sport</string>
    <string-array name="news_title">
        <item>Gambar Ilustrasi: Pengertian dan Fungsinya</item>
        <item>Menggambar Ilustrasi: Pengertian dan Sejarah Ilustrasi</item>
        <item>Mengenal Reduce, Reuse, Recycle, dan Manfaatnya</item>
        <item>Dibuang Sayang, Yuk Bikin Kerajinan Tangan dari Botol Plastik untuk Selamatkan Lingkungan</item>
        <item>Trending YouTube, Ini Lirik Lagu Ajarkan Aku - Arvian Dwi</item>
        <item>Coming Home with Leila Chudori: Dari Generasi Ketiga, Setelah Amy Tan dan Ha Jin</item>
        <item>Novia Tersingkir dari Indonesian Idol Setelah Dapat 5 Standing Ovation</item>
        <item>Jokowi Mau Gelar Balapan F1 di Indonesia pada Tahun Depan</item>
        <item>F1 PowerBoat di Danau Toba Siap Digelar, Sandiaga: Dapat Tarik Kunjungan 25.000 Wisatawan</item>
        <item>Kondisi Beckham Putra Jelang Bela Timnas Indonesia di Asian Games 2022</item>
        <item>Timnas Indonesia ke 16 Besar Asian Games 2022, Sananta dan Beckham Gabung</item>
        <item>Logistik dari Barcelona untuk MotoGP Indonesia 2023 Tiba di Mandalika</item>
    </string-array>
    <string-array name="news_date">
        <item>30 Desember 2023</item>
        <item>25 Desember 2023</item>
        <item>25 Desember 2023</item>
        <item>24 Desember 2023</item>
        <item>21 Desember 2023</item>
        <item>20 November 2023</item>
        <item>20 November 2023</item>
        <item>17 November 2023</item>
        <item>14 November 2023</item>
        <item>11 Oktober 2023</item>
        <item>8 September 2023</item>
        <item>3 September 2023</item>
    </string-array>
    <string-array name="news_category">
        <item>Ilustrasi, Desain</item>
        <item>Buku, Panduan</item>
        <item>Daur Ulang, Lingkungan, Global Warming</item>
        <item>Kreativitas, Daur Ulang</item>
        <item>Musik, Lagu, Arvian Dwi, Artis</item>
        <item>Coming Home</item>
        <item>Indonesian Idol, Musik, Kompetisi</item>
        <item>Formula 1, F1, Otomotif</item>
        <item>F1, PowerBoat, Danau Toba, Otomotif</item>
        <item>Sepak Bola, Timnas</item>
        <item>Sepak Bola, Timnas</item>
        <item>MotoGP, Otomotif</item>
    </string-array>
</resources>