<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.news.NewsDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:padding="16dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/news_detail_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/dummy_title"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/news_detail_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_date"
            android:layout_marginTop="8dp"
            android:textSize="14sp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/news_detail_title" />

        <ImageView
            android:id="@+id/news_detail_image"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_marginTop="16dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/news_detail_date"
            tools:src="@drawable/image_news_8" />

        <TextView
            android:id="@+id/news_detail_tags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_tags"
            android:textSize="12sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toTopOf="@+id/news_detail_title"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/news_detail_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lorem_ipsum"
            android:textSize="14sp"
            android:textStyle="normal"
            android:layout_marginTop="16dp"
            android:lineHeight="24sp"
            app:layout_constraintStart_toStartOf="@id/news_detail_title"
            app:layout_constraintTop_toBottomOf="@+id/news_detail_image" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>